sfdx-project/force-app/main/default/objects/OCC_Verification__c/OCC_Verification__c.object-meta.xml
<CustomObject>
    <!-- Phase 16: one row per verification attempt. Deliberately NOT fields on Contact: the agent
         permset is read-only on Contact, and this keeps it that way - the agent gets create/edit
         here only. The code itself is never stored, only a salted SHA-256 hash. -->
    <label>Verification</label>
    <pluralLabel>Verifications</pluralLabel>
    <nameField>
        <label>Verification Name</label>
        <type>AutoNumber</type>
        <displayFormat>VER-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>