sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>