sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <label>Code Hash</label>
    <description>Salted SHA-256 of the six-digit code. The code itself is never stored.</description>
    <type>Text</type>
    <length>128</length>
</CustomField>