sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Code_Plain__c.field-meta.xml
<CustomField>
    <fullName>Code_Plain__c</fullName>
    <label>Code (test mode only)</label>
    <description>EVAL ONLY. Populated only while Keyburn_Setting__mdt.Test_Mode__c is true, so the harness can read the code it would otherwise only find in the mailbox. Empty in normal operation, including the demo.</description>
    <type>Text</type>
    <length>10</length>
</CustomField>