sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Verifications</relationshipName>
    <relationshipLabel>Verifications</relationshipLabel>
</CustomField>