sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Sent_To__c</fullName>
    <label>Sent To</label>
    <description>Where the code was actually emailed. For demo data this is a plus-alias of the demo inbox.</description>
    <type>Email</type>
</CustomField>