sfdx-project/force-app/main/default/objects/OCC_Verification__c/fields/Verified_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_Email__c</fullName>
    <label>Verified Email</label>
    <description>The address the caller claimed, i.e. the Contact's own email - not the routed demo inbox.</description>
    <type>Email</type>
</CustomField>